<resources>
    <string name="app_name">WijiWaste</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_camera">Camera</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_from_story">Image from story</string>
    <string name="story_description">Story\'s Description</string>
    <string name="uploadWarning">Upload the image first</string>

    <string name="package_name">com.example.wijiwaste</string>
    <string name="trash">Hand Over The Trash</string>

    //ascleipius
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="analysis_error">Analysis Error!</string>

    //login

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Jelajahi Kisah Menarik Disini</string>
    <string name="title_welcome_page">Selamat Datang di Aplikasi Story Bangkit Academy</string>
    <string name="title_signup_page">Daftar dulu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukan Email dan Passwordnya Anda</string>
    <string name="title_login_page">Login Untuk Menjelajahi</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Menjelajahi Kisahnya.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="error">Error</string>
    <string name="desc_menu1">ini deskripsi</string>
    <string name="description">Tuliskan Deskripsi Anda</string>
    <string name="languange">Bahasa</string>
    <string name="tmbl_setting">Tombol pengaturan bahasa</string>
    <string name="tmbl_logout">Tombol keluar</string>
    <string name="camera_x">KameraX</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Masukkan Gambar Terlebih Dahulu</string>
</resources>