<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/title_info"/>

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/qr"
        android:title="@string/title_qr"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/title_history"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile"/>
</menu>