<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Camera.CameraFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_40dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imgUpload"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />



        <ImageView
            android:id="@+id/imgUpload"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image_from_story" />

        <Button
            android:id="@+id/btnCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/camera"
            android:backgroundTint="#FFBB02"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/imgUpload"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:text="@string/gallery"
            android:backgroundTint="#FFBB02"
            app:layout_constraintEnd_toEndOf="@+id/imgUpload"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnCam"
            app:layout_constraintTop_toBottomOf="@+id/imgUpload" />

        <!-- Tombol Hand Over the Trash -->
        <Button
            android:id="@+id/btnHandOverTrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:backgroundTint="#FFBB02"
            android:text="@string/trash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
